# Master-thesis-UESTC-2022

./: .gitignore  FeatureSpy.tex  README.md  SGXDedup-design-encryption.tex  SGXDedup-design-keyupdate.tex  SGXDedup-design-management.tex  SGXDedup-design-overview.tex  SGXDedup.tex  SGXDedupBackground.tex  SGXDedupConclusion.tex  SGXDedupDesign.tex  SGXDedupEvaluation-real.tex  SGXDedupEvaluation-synthetic.tex  SGXDedupEvaluation.tex  SGXDedupImplementation.tex  SGXDedupIntroduction.tex  SGXDedupRelated.tex  abstract.tex  acknowlegdegment.tex  appendix-featurespy.tex  appendix-sgxdedup.tex  appendix.tex  background.tex  introduction.tex  main.synctex(busy)  main.tex  publications.bib  reference.bib  summary.tex  thesis-uestc.bst  thesis-uestc.cls
FeatureSpy/: FeatureSpyBackground.tex  FeatureSpyConclusion.tex  FeatureSpyDesign-SPE.tex  FeatureSpyDesign-basic.tex  FeatureSpyDesign-secure.tex  FeatureSpyDesign-security.tex  FeatureSpyDesign.tex  FeatureSpyEvaluation-detection.tex  FeatureSpyEvaluation-performance.tex  FeatureSpyEvaluation-setup.tex  FeatureSpyImplementation.tex  FeatureSpyIntroduction.tex  FeatureSpyRelated.tex  FeatureSpySetting.tex
OpeningReport/report/: introduction.tex  main.tex  reference.bib  thesis-uestc.bst  thesis-uestc.cls
OpeningReport/report/pic/: ClusteringAttack.eps
SGXDedup/: SGXDedup-design-encryption.tex  SGXDedup-design-keyupdate.tex  SGXDedup-design-management.tex  SGXDedup-design-overview.tex  SGXDedupBackground.tex  SGXDedupConclusion.tex  SGXDedupDesign.tex  SGXDedupEvaluation-real.tex  SGXDedupEvaluation-synthetic.tex  SGXDedupEvaluation.tex  SGXDedupImplementation.tex  SGXDedupIntroduction.tex  SGXDedupRelated.tex
artifacts/: README.md
artifacts/FeatureSpy/: FeatureSpy.cpp  chunking.cpp  featureExtraction.hpp  processResult.sh  runCouch.sh
artifacts/FeatureSpy/traceDownload/: downloadTraceCouch.sh  downloadTraceLinux.sh
artifacts/TEEDedup+/: config.json
artifacts/TEEDedup+/include/: fingerprinter.hpp  privateSettings.hpp  systemSettings.hpp
artifacts/TEEDedup+/src/: CMakeLists.txt
artifacts/TEEDedup+/src/client/: encoder.cpp  fingerprinter.cpp
artifacts/TEEDedup+/src/keymanage/: keyServer.cpp
artifactsARM/ClientSideTZ/: CMakeLists.txt  config.json
artifactsARM/ClientSideTZ/Scripts/: buildDebugMode.sh  buildReleaseMode.sh  cleanRunTime.sh
artifactsARM/ClientSideTZ/include/: chunker.hpp  configure.hpp  cryptoPrimitive.hpp  dataStructure.hpp  encoder.hpp  fingerprinter.hpp  keyClient.hpp  messageQueue.hpp  powClient.hpp  powTrustZone.hpp  pow_enclave_ta.h  privateSettings.hpp  protocol.hpp  recvDecode.hpp  retriever.hpp  sender.hpp  ssl.hpp  systemSettings.hpp
artifactsARM/ClientSideTZ/src/: CMakeLists.txt
artifactsARM/ClientSideTZ/src/client/: CMakeLists.txt  baselineTest.cpp  chunker.cpp  clientMain.cpp  encoder.cpp  fileGen.cpp  fingerprinter.cpp  keyClient.cpp  opensslTest.cpp  powClient.cpp  powTZ.cpp  recvDecode.cpp  sender.cpp
artifactsARM/ClientSideTZ/src/util/: CMakeLists.txt  configure.cpp  cryptoPrimitive.cpp  ssl.cpp
artifactsARM/ServerSide/: CMakeLists.txt  config.json
artifactsARM/ServerSide/Scripts/: buildDebugMode.sh  buildReleaseMode.sh  initialization.sh
artifactsARM/ServerSide/include/: cache.hpp  configure.hpp  dataSR.hpp  database.hpp  dedupCore.hpp  keyServer.hpp  messageQueue.hpp  powServer.hpp  privateSettings.hpp  ssl.hpp  storageCore.hpp  systemSettings.hpp
artifactsARM/ServerSide/src/: CMakeLists.txt
artifactsARM/ServerSide/src/enclave/: CMakeLists.txt
artifactsARM/ServerSide/src/server/: CMakeLists.txt  dataSR.cpp  powServer.cpp
artifactsSGX/FeatureSpy/: Makefile  README.md  chunker.hpp  outputFeature.cpp  processResult.cpp  runLinux.sh
artifactsSGX/FeatureSpy/traceDownload/: get_couchbase_container.sh
artifactsSGX/TEEDedup+/: README.md
artifactsSGX/TEEDedup+/Scripts/: buildReleaseMode.sh
artifactsSGX/TEEDedup+/include/: configure.hpp
artifactsSGX/TEEDedup+/src/client/: keyClient.cpp
artifactsSGX/TEEDedup+/src/util/: configure.cpp
paper/: ClusteringAttack.tex  Conclusion.tex  Countermeasure.tex  DataSetandSystemReport.tex  DistributionAttack.tex  Experiments.tex  RelatedWork.tex  Translate.tex  abstract.tex  appendix.tex  background.tex  introduction.tex  main.tex  origin-references.bib  publications.bib  reference.bib  summary.tex  thesis-uestc.bst  thesis-uestc.cls  threatModel.tex
paper/FeatureSpy/: FeatureSpyDesign-SPE.tex  FeatureSpyDesign-secure.tex  FeatureSpyEvaluation-performance.tex  FeatureSpyEvaluation-setup.tex  FeatureSpyImplementation.tex  FeatureSpySetting.tex
paper/SGXDedup/: SGXDedup-design-encryption.tex  SGXDedup-design-keyupdate.tex  SGXDedupConclusion.tex  SGXDedupDesign.tex  SGXDedupEvaluation-real.tex  SGXDedupImplementation.tex  SGXDedupIntroduction.tex
paper/pic/: DistributionAttack.eps  SDFS-DedupFileEngine.eps  SDFS-DedupStorageEngine.eps  TechnicalRoute.eps
pic/: DedupSystemStorageMode.eps  EncryptDedupSystemLogic.eps  crop.sh
pic/featurespy/plot/: figures.pptx
pic/featurespy/plot/bandwidth/: couch_traffic.r  (+9 more)
slides/: GraduationReport.tex  UESTC.sty  beamerinnerthemematerial.sty  masterSlides.tex  masterThesisSlides-short.tex  masterThesisSlides.synctex(busy)  masterThesisSlides.tex  publication.bib
slides/img/: BaseFrequencyAttack.eps  DedupSystemView.eps  FSLandVMfrequencyDis.eps  SDFS-Workflow.eps
(+236 files in other folders)
